# nasa-api

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  input.css  netlify.toml  tailwind.config.js  vercel.json
.github/workflows/: deploy.yml
assets/: NewAmsterdam-Regular.woff2.br  card.css  card.css.br  cross.svg.br  favicon.ico.br  home.css  home.css.br  logo.png.br  main.css  main.css.br  mars.css  mars.css.br  marsai.webp.br  netlify.toml  netlify.toml.br  output.css  planets.css  planets.css.br  satelite.mp4.br  saturn.css  saturn.css.br  saturn.webp.br  saturn2.webp.br  sun.css  sun.css.br  sun2.webp.br  tailwind.css  tailwind.css.br
docs/: 404.html  Strait-Regular.woff2.br  __assets_head.html  burger.svg.br  earth.jpg.br  index.html  logo.png.br  logo.webp.br  main.css.br  mars.css  mars.mp4.br  nasa.woff2.br  sun.webp.br  tailwind.css  tailwind.css.br
docs/assets/dioxus/: dioxusproject.js  dioxusproject.js.br  dioxusproject_bg.wasm  dioxusproject_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
src/: main.rs
src/components/: about_component.rs  card_component.rs  env.rs  header_component.rs  home_component.rs  mars_explanation_component.rs  mars_mission_component.rs  mod.rs  moon_component.rs  moon_image_carousel.rs  my_list_component.rs  nav_bar_component.rs  neptune_component.rs  planets_component.rs  pluto_component.rs  posts_component.rs  reqwester_component.rs  saturn_component.rs  sun_component.rs
src/macros/: mod.rs  nasa_fetcher.rs
