[package]
name = "nasa-api"
version = "0.1.0"
authors = ["Cyprien"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.0-alpha.4", features = ["web", "router"] }
serde = { version = "1.0.210", features = ["derive"] }
# Debug
dioxus-logger = "0.5.1"
reqwest = { version = "0.12.7", features = ["json"] }
getrandom = { version = "0.2.15", features = ["js"] }
serde_json = "1.0.124"
rand = "0.8.5"
freyr = "0.1.7"

[build-dependencies]

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
