[package]
name = "nasa-api"
version = "0.1.0"
authors = ["Cyprien"]
edition = "2021"

[dependencies]

dioxus = { version = "0.6.3", features = ["web", "router"] }
serde = { version = "1.0.216", features = ["derive"] }
dioxus-logger = "0.6.2"
reqwest = { version = "0.12.9", features = ["json"] }
getrandom = { version = "0.2.15", features = ["js"] }
serde_json = "1.0.140"
rand = "0.8.5"
freyr = "0.1.16"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
